# weather-cli

./: .gitignore  CMakeLists.txt  Readme.md
src/: weather.cpp
